# WayPenguin

./: .gitignore  AGENTS.md  ALGORITHMS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml
scripts/: build-releases.sh
waypenguin-assets/: Cargo.toml
waypenguin-assets/src/: lib.rs
waypenguin-assets/svg/: README.md  generate_poses.py
waypenguin-assets/svg/beetle-azure/: pack.toml
waypenguin-assets/svg/beetle-gold/: pack.toml
waypenguin-assets/svg/beetle-jade/: pack.toml
waypenguin-assets/svg/beetle-void/: pack.toml
waypenguin-assets/svg/ladybug-classic/: pack.toml
waypenguin-assets/svg/tux-alpha/: generate_poses.py  pack.toml
waypenguin-assets/tests/: vector_render.rs
waypenguin-backends/: Cargo.toml
waypenguin-backends/cosmic/: Cargo.toml
waypenguin-backends/cosmic/src/: lib.rs
waypenguin-backends/gnome/: Cargo.toml
waypenguin-backends/gnome/src/: lib.rs
waypenguin-backends/hyprland/: Cargo.toml
waypenguin-backends/hyprland/src/: lib.rs
waypenguin-backends/kde/: Cargo.toml
waypenguin-backends/kde/src/: lib.rs
waypenguin-backends/src/: lib.rs
waypenguin-cli/: Cargo.toml
waypenguin-cli/src/: main.rs
waypenguin-core/: Cargo.toml
waypenguin-core/src/: lib.rs
waypenguin-daemon/: Cargo.toml
waypenguin-daemon/src/: main.rs
waypenguin-renderer/: Cargo.toml
waypenguin-renderer/src/: lib.rs
waypenguin-settings/: Cargo.toml
waypenguin-settings/src/: main.rs
