[workspace]
resolver = "2"
members = [
    "waypenguin-core",
    "waypenguin-renderer",
    "waypenguin-backends",
    "waypenguin-backends/kde",
    "waypenguin-backends/gnome",
    "waypenguin-backends/hyprland",
    "waypenguin-backends/cosmic",
    "waypenguin-assets",
    "waypenguin-cli",
    "waypenguin-settings",
    "waypenguin-daemon",
]
